--- a/build.gradle
+++ b/build.gradle
@@ -18,16 +18,22 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-	//SpringBoot 시작하기 위한 핵심 의존성 집합
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-web-services'
+	runtimeOnly 'mysql:mysql-connector-java'
+
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 	compileOnly 'org.springframework.boot:spring-boot-starter-tomcat'
-	testImplementation 'org.springframework.boot:spring-boot-starter-tomcat'
 
 	//Tomcat Jasper 의존성 주입 (JSP 파일을 servlet 코드로 변환하여 컴파일 하고 실행하는데 사용)
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
