--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.1'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.springframework.boot' version '3.3.4'
+	id 'io.spring.dependency-management' version '1.1.6'
 }
 
 group = 'com.example'
@@ -30,7 +30,10 @@ dependencies {
 
 	runtimeOnly 'mysql:mysql-connector-java:8.0.30'
 
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	compileOnly 'org.springframework.boot:spring-boot-starter-tomcat'
@@ -44,12 +47,30 @@ dependencies {
 	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl'
 
 	// Swagger
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
 	//security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+}
+
+configurations.all {
+	resolutionStrategy {
+		force 'io.jsonwebtoken:jjwt-api:0.12.5'
+		force 'io.jsonwebtoken:jjwt-impl:0.12.5'
+		force 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+	}
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+// gradle clean 시에 QClass 디렉토리 삭제
+clean {
+	delete file('src/main/generated')
 }
