--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -19,10 +19,10 @@ jobs:
       packages: write
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'adopt'
@@ -103,11 +103,12 @@ jobs:
           password: ${{ secrets.PAT}}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:master-${{ github.sha }}
+          tags: ${{ env.REGISTRY }}/${{ lowercase(github.repository) }}/pinboard:master-${{ github.sha }}
+          outputs: type=registry
 
   deploy:
     needs: build-and-push
