--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -107,7 +107,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ env.REGISTRY }}/${{ lowercase(github.repository) }}/pinboard:master-${{ github.sha }}
+          tags: ${{ env.REGISTRY }}/${{ github.repository }}/pinboard:master-${{ github.sha }}
           outputs: type=registry
 
   deploy:
