--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  REPOSITORY: ${{ github.repository }}
+  #REPOSITORY: ${{ github.repository }}
   IMAGE_NAME: pinboard
 
 jobs:
@@ -102,12 +102,15 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.PAT}}
 
+      - name: Set lowercase repository name
+        run: echo "REPO_LOWERCASE=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{ env.REGISTRY }}/${{ github.repository }}/pinboard:master-${{ github.sha }}
+          tags: ${{ env.REGISTRY }}/${{ env.REPO_LOWERCASE }}/${{ env.IMAGE_NAME }}:master-${{ github.sha }}
           outputs: type=registry
 
   deploy:
@@ -122,7 +125,7 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker pull ${{ env.REGISTRY }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:master-${{ github.sha }}
+            docker pull ${{ env.REGISTRY }}/${{ env.REPO_LOWERCASE }}/${{ env.IMAGE_NAME }}:master-${{ github.sha }}
             docker stop pinboard-app || true
             docker rm pinboard-app || true
             docker run -d --name pinboard-app -p 8484:8484 \
@@ -132,4 +135,4 @@ jobs:
               -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
               -e ENCRYPTION_SECRET_KEY=${{ secrets.ENCRYPTION_SECRET_KEY }} \
               -e ENCRYPTION_INIT_VECTOR=${{ secrets.ENCRYPTION_INIT_VECTOR }} \
-              ${{ env.REGISTRY }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:master-${{ github.sha }}
+              ${{ env.REGISTRY }}/${{ env.REPO_LOWERCASE }}/${{ env.IMAGE_NAME }}:master-${{ github.sha }}
