--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -47,7 +47,6 @@ jobs:
                 ddl-auto: update
               show-sql: true
 
-          # Additional configurations for encoding
           spring.datasource.hikari.connection-init-sql: SET NAMES utf8mb4
 
           server:
@@ -121,6 +120,7 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            echo "${{ secrets.PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
             docker pull ${{ env.REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
             if docker ps -a --format '{{.Names}}' | grep -q '^pinboard-app$'; then
               docker stop pinboard-app
