--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -64,6 +64,7 @@ jobs:
               operations-sorter: method
               disable-swagger-default-url: true
               with-credentials: true
+              displayRequestDuration: true
             api-docs:
               path: /v3/api-docs
               enabled: true
