--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -42,10 +42,14 @@ jobs:
               username: ${DB_USERNAME}
               password: ${DB_PASSWORD}
             jpa:
-              database-platform: org.hibernate.dialect.MySQLDialect
               hibernate:
                 ddl-auto: update
               show-sql: true
+            data:
+              redis:
+              host: localhost
+              port: 6379
+              timeout: 60000
 
           spring.datasource.hikari.connection-init-sql: SET NAMES utf8mb4
 
