fix: 원격서버 docker내 redis 설정 테스트

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -47,7 +47,7 @@ jobs:
               show-sql: true
             data:
               redis:
-              host: redis
+              host: my-redis
               port: 6379
               timeout: 60000
 
