fix: 원격서버 docker내 redis 설정 테스트

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -145,5 +145,5 @@ jobs:
               -e ENCRYPTION_SECRET_KEY=${{ secrets.ENCRYPTION_SECRET_KEY }} \
               -e ENCRYPTION_INIT_VECTOR=${{ secrets.ENCRYPTION_INIT_VECTOR }} \
               -e CROSS_ORIGINS="${{ secrets.CROSS_ORIGINS }}" \
-              -e REDIS_PRIVATE_IP="${{ secrets.REDIS_PRIVATE_IP }} \
+              -e REDIS_PRIVATE_IP=${{ secrets.REDIS_PRIVATE_IP }} \
               ${{ env.REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
