--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -47,7 +47,7 @@ jobs:
               show-sql: true
             data:
               redis:
-              host: ${REDIS_PRIVATE_IP}
+              host: my-redis
               port: 6379
               timeout: 60000
 
@@ -96,7 +96,6 @@ jobs:
           ENCRYPTION_SECRET_KEY: ${{ secrets.ENCRYPTION_SECRET_KEY }}
           ENCRYPTION_INIT_VECTOR: ${{ secrets.ENCRYPTION_INIT_VECTOR }}
           CROSS_ORIGINS: ${{ secrets.CROSS_ORIGINS }}
-          REDIS_PRIVATE_IP: ${{ secrets.REDIS_PRIVATE_IP }}
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
@@ -145,5 +144,4 @@ jobs:
               -e ENCRYPTION_SECRET_KEY=${{ secrets.ENCRYPTION_SECRET_KEY }} \
               -e ENCRYPTION_INIT_VECTOR=${{ secrets.ENCRYPTION_INIT_VECTOR }} \
               -e CROSS_ORIGINS="${{ secrets.CROSS_ORIGINS }}" \
-              -e REDIS_PRIVATE_IP=${{ secrets.REDIS_PRIVATE_IP }} \
               ${{ env.REGISTRY }}/${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
