--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -47,7 +47,7 @@ jobs:
               show-sql: true
             data:
               redis:
-                host: ${SPRING_REDIS_HOST:my-redis}
+                host: my-redis
                 port: 6379
                 timeout: 60000
 
